--- a/ilham.css
+++ b/ilham.css
@@ -74,25 +74,23 @@
         }
         
         .copy-btn {
-            background-color: var(--primary-color);
-            color: rgb(255, 255, 255);
-            border: none;
-            padding: 8px 15px;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            font-size: 0.9rem;
             display: inline-block;
-            margin-top: 10px;
-        }
+            padding: 8px 12px;
+            background-color: #1f6dea;
+            color: white;
+            border-radius: 15px;
+            text-decoration: none;
+            margin: 10px 5px 0 5px;
+    }
+
+    .tooltip{
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+    }
         
         .copy-btn:hover {
             background-color: var(--secondary-color);
-        }
-        
-        .tooltip {
-            position: relative;
-            display: inline-block;
         }
         
         .tooltip .tooltiptext {
@@ -122,4 +120,16 @@
                 padding: 20px
             }
         }
-        
+
+   .copyright{
+    
+      background-color: #fafafa;
+      padding: 12px;
+      margin-top: 10px;
+      text-align: center;
+      border-radius: 20px;
+      font-size: 14px;
+      color: #000000;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+      
+   }
