--- a/ilham.css
+++ b/ilham.css
@@ -8,7 +8,7 @@
         
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #0d5fd9 0%, #ffffff 100%);
+            background: linear-gradient(135deg, #065bd9 0%, #ffffff 100%);
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -57,6 +57,7 @@
             margin-bottom: 20px;
             color: var(--primary-color);
             font-weight: 600;
+            margin-top: 20px;
         }
         
         .text-box-content {
@@ -81,13 +82,10 @@
             border-radius: 15px;
             text-decoration: none;
             margin: 10px 5px 0 5px;
+            max-width: 95%;
+            margin-top: 10px;
     }
 
-    .tooltip{
-        display: flex;
-        gap: 20px;
-        justify-content: center;
-    }
         
         .copy-btn:hover {
             background-color: var(--secondary-color);
@@ -115,9 +113,12 @@
             visibility: visible;
             opacity: 1;
         }
-        @media (max-width: 768px) {
+        @media (max-width: 600px) {
             .text-box {
-                padding: 20px
+                padding: 10px
+            }
+            .button-grup a{
+                flex: 1 1 100%;
             }
         }
 
@@ -132,4 +133,11 @@
       color: #000000;
       box-shadow: 0 2px 5px rgba(0,0,0,0.05);
       
+   }
+
+   .button-grup{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 100px;
    }
